src/objects/Voucher__c.object
<CustomObject>
    <description>Oggetto che contiene i codici voucher richiesti ad hybris</description>
    <fields>
        <fullName>Codice_Voucher__c</fullName>
        <label>Codice Voucher</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Richiesta_Voucher__c</fullName>
        <label>Richiesta Voucher</label>
        <referenceTo>Richiesta_Voucher__c</referenceTo>
        <relationshipLabel>Vouchers</relationshipLabel>
        <relationshipName>Vouchers</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Stato__c</fullName>
        <description>N=Nuovo
A=Assegnato
C=Annullato</description>
        <label>Stato</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>N</fullName>
                </value>
                <value>
                    <fullName>A</fullName>
                </value>
                <value>
                    <fullName>C</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>Voucher</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>V{000000}</displayFormat>
        <label>Nome Voucher</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Vouchers</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>